--- a/GiveLife-frontend/src/app/components/footer/footer.component.html
+++ b/GiveLife-frontend/src/app/components/footer/footer.component.html
@@ -1,20 +1,23 @@
 <!-- Site footer -->
-
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
 <footer class="site-footer">
   <div class="container">
     <div class="row">
       <div class="col-sm-12 col-md-6">
-        <h6>About</h6>
+        <h6>About Us</h6>
         <p id="about" class="text-justify">
           GiveLife.com
-          <i>Accessories That Make Your Home More Simple And Upscale </i> In our
-          application you will find
-         GiveLife is a globally recognized charity App, 
-         that connect you the donor directly with the charity of your choice via
-          the app delivery service. With a few simple steps you are 
-          able to donate anything your heart desires to the charity of your choice 
-          in your city. We ensure to support every type of charity and humanitarian 
-          event possible, including natural disaster affected areas.
+          <br />
+          In our application you will find GiveLife is a globally recognized
+          charity App, that connect you the donor directly with the charity of
+          your choice via the app delivery service. With a few simple steps you
+          are able to donate anything your heart desires to the charity of your
+          choice in your city. We ensure to support every type of charity and
+          humanitarian event possible, including natural disaster affected
+          areas.
         </p>
       </div>
 
