--- a/GiveLife-frontend/src/app/components/footer/footer.component.css
+++ b/GiveLife-frontend/src/app/components/footer/footer.component.css
@@ -1,11 +1,11 @@
 /*   footer  */
 
 .site-footer {
-  background-color: rgb(153, 155, 132);
+  background-color: hsl(354, 70%, 54%,90%);
   padding: 45px 0 20px;
   font-size: 18px;
   line-height: 24px;
-  color: rgb(216, 172, 156);
+  color: rgb(222, 220, 253);
 }
 
 .site-footer hr {
@@ -26,7 +26,7 @@
 }
 
 .site-footer a {
-  color: #737373;
+  color: #0a34f15e;
 }
 
 .site-footer a:hover {
@@ -44,7 +44,7 @@
 }
 
 .footer-links a {
-  color: rgb(115, 115, 115);
+  color: rgb(77, 76, 76);
 }
 
 .footer-links a:active,
@@ -69,7 +69,7 @@
   margin-left: 6px;
   margin-right: 0;
   border-radius: 100%;
-  background-color: rgb(51, 61, 51, 0.5);
+  background-color: rgba(255, 252, 251, 0.568);
 }
 
 .copyright-text {
