--- a/GiveLife-frontend/src/app/components/footer/footer.component.html
+++ b/GiveLife-frontend/src/app/components/footer/footer.component.html
@@ -25,19 +25,19 @@
         <h6>Categories</h6>
         <ul class="footer-links">
           <li>
-            <a href="http://Rafai3.com/category/">Education</a>
+            <a href="http://GiveLife.com/category/">Education</a>
           </li>
           <li>
-            <a href="http://Rafai3.com/category/">Medical Help</a>
+            <a href="http://GiveLife.com/category/">Medical Help</a>
           </li>
-          <li><a href="http://Rafai3.com/category/">Healthy Food</a></li>
-          <li><a href="http://Rafai3.com/category/">Clean Water</a></li>
+          <li><a href="http://GiveLife.com/category/">Healthy Food</a></li>
+          <li><a href="http://GiveLife.com/category/">Clean Water</a></li>
         </ul>
       </div>
 
       <div class="col-xs-6 col-md-3">
         <img
-          src="assets/images/logo3.jpg"
+          src="https://image.flaticon.com/icons/png/512/786/786660.png"
           style="height: 180px; border-radius: 3%"
         />
       </div>
