--- a/GiveLife-frontend/src/app/components/post/post.component.css
+++ b/GiveLife-frontend/src/app/components/post/post.component.css
@@ -1,87 +1,91 @@
-@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap");
 
-*{
-    font-family: 'Mitr', sans-serif;
+* {
+  font-family: "Mitr", sans-serif;
 }
 
-button{
-    margin-top: 20px;
-    margin-left: 25%;
-    /* align-items: center; */
-    /* margin: auto auto; */
-    width: 50%;
-    height: 38px;
-    border-radius: 30px;
-    border: none;
-    background-color: #DC3545;
-    font-weight: normal;
-    color: white;
-    font-size: large;
+button {
+  margin-top: 20px;
+  margin-left: 25%;
+  /* align-items: center; */
+  /* margin: auto auto; */
+  width: 50%;
+  height: 38px;
+  border-radius: 30px;
+  border: none;
+  background-color: #dc3545;
+  font-weight: normal;
+  color: white;
+  font-size: large;
 }
 
 button:hover {
-    background-color: white;
-    border: 1px solid #DC3545;
-    color: #DC3545;
-    transition: 0.7s;
+  background-color: white;
+  border: 1px solid #dc3545;
+  color: #dc3545;
+  transition: 0.7s;
 }
 
-.card{
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    border-radius: 15px;
+.card {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 15px;
 }
 
 body {
-    font-family: 'Roboto', sans-serif
+  font-family: "Roboto", sans-serif;
 }
 
-.filterTable{
-    margin: auto;
-    /* border: 1px #DC3545 solid; */
-    margin-top: 40px;
-    padding: 10px 25px;
-    border-radius: 15px;
-    text-align: center;
-    width: 60%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+.filterTable {
+  margin: auto;
+  /* border: 1px #DC3545 solid; */
+  margin-top: 40px;
+  padding: 10px 25px;
+  border-radius: 15px;
+  text-align: center;
+  width: 60%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .need {
-    color: #DC3545;
-    text-decoration: none;
+  color: #dc3545;
+  text-decoration: none;
 }
 
-.a{
-    color: rgb(118,118,118);
-    text-decoration: none;
-    /* cursor: auto; */
+.a {
+  color: rgb(118, 118, 118);
+  text-decoration: none;
+  /* cursor: auto; */
 }
-.element{
-    color: rgb(118,118,118);
-    text-decoration: none;
-    /* cursor: auto; */
-}
-
-.categoryFilter{
-    display: inline-block;
-    padding: 6px;
-
+.element {
+  color: rgb(118, 118, 118);
+  text-decoration: none;
+  /* cursor: auto; */
 }
 
-#card{
-    width: 30%;    
+.categoryFilter {
+  display: inline-block;
+  padding: 6px;
+}
+
+#card {
+  width: 30%;
+}
+
+.alerttxt {
+  color: red;
+  background-color: white;
 }
 
 @media only screen and (max-width: 993px) {
-    #card{
-        width: 45%;    
-    }
+  #card {
+    width: 45%;
+  }
 }
 
 @media only screen and (max-width: 768px) {
-    #card{
-        width: 90%;    
-    }
+  #card {
+    width: 90%;
+  }
 }
