--- a/GiveLife-frontend/src/app/components/footer/footer.component.html
+++ b/GiveLife-frontend/src/app/components/footer/footer.component.html
@@ -1,1 +1,19 @@
-<p>footer works!</p>
+<footer>
+    <div class="rightFooter">
+
+            <h3>Contact Us</h3>
+ <ul> 
+     <li></li>
+     <li></li>
+     <li></li>
+     <li></li>
+     <li></li>
+     <li></li>
+ </ul>
+
+    </div>
+    <div class="leftFooter">
+        <div></div>
+
+    </div>
+</footer>
