--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -1,63 +1,102 @@
 <div class="container">
-    <div class="filterTable">
-        <a>
-            <a class="need">Category : </a>
-            <div style="margin-left: 10px;" class="categoryFilter" *ngFor="let item of [0, 1, 2, 3]; let i = index">
-                <input type="checkbox" value="{{ item }}" [checked]="selected1 === i" (change)="selected1 = i" (change)="onChangeCat($event)" />
+  <div class="filterTable">
+    <a>
+      <a class="need">Category : </a>
+      <div
+        style="margin-left: 10px"
+        class="categoryFilter"
+        *ngFor="let item of [0, 1, 2, 3]; let i = index"
+      >
+        <input
+          type="checkbox"
+          value="{{ item }}"
+          [checked]="selected1 === i"
+          (change)="selected1 = i"
+          (change)="onChangeCat($event)"
+        />
 
-                <a class="a" *ngIf="item == 0"> Food</a>
-                <a class="a" *ngIf="item == 1"> Medicine</a>
-                <a class="a" *ngIf="item == 2"> Money</a>
-                <a class="a" *ngIf="item == 3"> Cloths</a>
-            </div>
-        </a><br>
-        <hr style="width: 50%; margin-left: 25%;" />
-        <a>
-            <a class="need">Amount : </a>
-            <div style="margin-left: 15px;" class="categoryFilter" *ngFor="let item of [500, 2000, 3000]; let i = index">
-                <input type="checkbox" value="{{ item }}" [checked]="selected === i" (change)="selected = i" (change)="onChange($event)" /><a class="a element"> 0-{{ item }} </a>
-            </div>
-        </a>
-    </div>
+        <a class="a" *ngIf="item == 0"> Food</a>
+        <a class="a" *ngIf="item == 1"> Medicine</a>
+        <a class="a" *ngIf="item == 2"> Money</a>
+        <a class="a" *ngIf="item == 3"> Cloths</a>
+      </div> </a
+    ><br />
+    <hr style="width: 50%; margin-left: 25%" />
+    <a>
+      <a class="need">Amount : </a>
+      <div
+        style="margin-left: 15px"
+        class="categoryFilter"
+        *ngFor="let item of [500, 2000, 3000]; let i = index"
+      >
+        <input
+          type="checkbox"
+          value="{{ item }}"
+          [checked]="selected === i"
+          (change)="selected = i"
+          (change)="onChange($event)"
+        /><a class="a element"> 0-{{ item }} </a>
+      </div>
+    </a>
+  </div>
 
-    <div class="d-flex flex-row justify-content-around flex-wrap p-5">
-        <div id="card" class="card align-self-between mt-0 p-3 mb-5" *ngFor="let item of postsArray">
-            <form class="card-details">
-                <div class="form-group">
-                    <div>
-                        <p>{{ item.postTxt }}</p>
-                    </div>
-                    <hr />
-                    <div>
-                        <div>
-                            <span class="need">Need Category : </span>
-                            <span class="text-dark" *ngIf="item.needCatogry == 0">Food</span>
-                            <span class="text-dark" *ngIf="item.needCatogry == 1">Medicine</span
+  <div class="d-flex flex-row justify-content-around flex-wrap p-5">
+    <div
+      id="card"
+      class="card align-self-between mt-0 p-3 mb-5"
+      *ngFor="let item of postsArray"
+    >
+      <form class="card-details">
+        <div class="form-group">
+          <div>
+            <p>{{ item.postTxt }}</p>
+          </div>
+          <hr />
+          <div>
+            <div>
+              <span class="need">Need Category : </span>
+              <span class="text-dark" *ngIf="item.needCatogry == 0">Food</span>
+              <span class="text-dark" *ngIf="item.needCatogry == 1"
+                >Medicine</span
               >
               <span class="text-dark" *ngIf="item.needCatogry == 2">Money</span>
-                            <span class="text-dark" *ngIf="item.needCatogry == 3">Cloths</span
+              <span class="text-dark" *ngIf="item.needCatogry == 3"
+                >Cloths</span
               >
             </div>
             <div>
               <span class="need">Required Amount : </span>
-                            <span class="text-dark">{{ item.requiredAmount }}</span>
-                        </div>
-                        <div>
-                            <span class="need">Rest Amount : </span>
-                            <span class="text-dark">{{ item.restAmount }}</span>
-                        </div>
-                    </div>
+              <span class="text-dark">{{ item.requiredAmount }}</span>
+            </div>
+            <div>
+              <span class="need">Rest Amount : </span>
+              <span class="text-dark">{{ item.restAmount }}</span>
+            </div>
+          </div>
 
-                    <button type="submit" (click)="opendonateform(donateform, item.postId)">
+          <button
+            type="submit"
+            (click)="opendonateform(donateform, item.postId)"
+          >
             Donate <i>♥</i>
           </button>
-                </div>
-            </form>
         </div>
-        <div *ngIf="postsArray?.length == 0" class="alert alert-primary mt-5  d-flex justify-content-center align-items-center" role="alert">
-            <p>there is no posts yet</p>
-        </div>
+      </form>
     </div>
+  </div>
+  <div
+    *ngIf="postsArray?.length == 0"
+    class="
+      alert alert-danger
+      mt-5
+      d-flex
+      justify-content-center
+      align-items-center
+    "
+    role="alert"
+  >
+    <p>THERE IS NO POSTS YET !!</p>
+  </div>
 </div>
 
 <!--  -->
@@ -66,29 +105,50 @@
 <!--  -->
 
 <ng-template #donateform let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">Step of Help</h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Step of Help</h4>
+    <button
+      type="button"
+      class="close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    >
       <span aria-hidden="true"> × </span>
     </button>
-    </div>
+  </div>
 
-    <!-- model -->
-    <div class="modal-body">
-        <form name="donateform" #donateform="ngForm" (ngSubmit)="donateToPost(Amount.value)">
-            <div class="row">
-                <div class="col-md">
-                    <div class="parent">
-                        <br />
-                        <div class="div2">
-                            <input class="form-control" name="Amount" #Amount [(ngModel)]="donnation.Amount" placeholder="Donated Amount.." required pattern="^[0-9]*$" />
-                        </div>
-                        <br />
-                        <div class="alert alert-warning" role="alert" *ngIf="
+  <!-- model -->
+  <div class="modal-body">
+    <form
+      name="donateform"
+      #donateform="ngForm"
+      (ngSubmit)="donateToPost(Amount.value)"
+    >
+      <div class="row">
+        <div class="col-md">
+          <div class="parent">
+            <br />
+            <div class="div2">
+              <input
+                class="form-control"
+                name="Amount"
+                #Amount
+                [(ngModel)]="donnation.Amount"
+                placeholder="Donated Amount.."
+                required
+                pattern="^[0-9]*$"
+              />
+            </div>
+            <br />
+            <div
+              class="alert alert-warning"
+              role="alert"
+              *ngIf="
                 donateform.controls.Amount?.touched &&
                 donateform.controls.Amount.errors
-              ">
-                            <span *ngIf="donateform.controls.Amount.errors.required">
+              "
+            >
+              <span *ngIf="donateform.controls.Amount.errors.required">
                 donnation is required</span
               >
               <span *ngIf="donateform.controls.Amount.errors.pattern"
@@ -102,16 +162,20 @@
               *ngIf="customError.flag"
             >
               <span>{{ customError.serverError }}</span>
-                        </div>
-                        <br />
-                        <button class="div5" type=" submit " [disabled]="
+            </div>
+            <br />
+            <button
+              class="div5"
+              type=" submit "
+              [disabled]="
                 donateform.invalid == true && customError.flag == false
-              ">
+              "
+            >
               Donate <i>♥</i>
             </button>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
 </ng-template>
