--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -8,7 +8,7 @@
                 <a class="a" *ngIf="item == 0"> Food</a>
                 <a class="a" *ngIf="item == 1"> Medicine</a>
                 <a class="a" *ngIf="item == 2"> Money</a>
-                <a class="a" *ngIf="item == 3"> Cloths</a>
+                <a class="a" *ngIf="item == 3"> Clothes</a>
             </div>
         </a><br>
         <hr style="width: 50%; margin-left: 25%;" />
@@ -35,7 +35,7 @@
                             <span class="text-dark" *ngIf="item.needCatogry == 1">Medicine</span
               >
               <span class="text-dark" *ngIf="item.needCatogry == 2">Money</span>
-                            <span class="text-dark" *ngIf="item.needCatogry == 3">Cloths</span
+                            <span class="text-dark" *ngIf="item.needCatogry == 3">Clothes</span
               >
             </div>
             <div>
