--- a/GiveLife-frontend/src/app/components/footer/footer.component.html
+++ b/GiveLife-frontend/src/app/components/footer/footer.component.html
@@ -23,7 +23,7 @@
 />
 <footer class="site-footer">
   <div class="container">
-    <div class="row">
+    <div class="d-flex flex-row pt-3">
       <div class="col-sm-12 col-md-6">
         <h6>About Us</h6>
         <p id="about" class="text-justify">
@@ -39,26 +39,17 @@
         </p>
       </div>
 
-      <div class="col-xs-6 col-md-3">
-        <h6>Categories</h6>
-        <ul class="footer-links">
-          <li>
-            <a href="http://GiveLife.com/category/">Education</a>
-          </li>
-          <li>
-            <a href="http://GiveLife.com/category/">Medical Help</a>
-          </li>
-          <li><a href="http://GiveLife.com/category/">Healthy Food</a></li>
-          <li><a href="http://GiveLife.com/category/">Clean Water</a></li>
-        </ul>
+      <div class="col-xs-6 col-md-3 ">
       </div>
 
-      <div class="col-xs-6 col-md-3">
+      <div class="col-xs-6 col-md-3 ">
         <img
           src="https://image.flaticon.com/icons/png/512/786/786660.png"
           style="height: 180px; border-radius: 3%"
         />
       </div>
+
+     
     </div>
     <hr />
   </div>
@@ -78,8 +69,9 @@
           </li>
           <li>
             <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#" class="fa fa-youtube"></a>
+           
           </li>
+          <li > <a class="youtube" href="#" > <i class="fa fa-youtube"></i> </a></li>
           <li>
             <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
           </li>
