--- a/GiveLife-frontend/src/app/components/post/post.component.html
+++ b/GiveLife-frontend/src/app/components/post/post.component.html
@@ -106,10 +106,11 @@
 
 <ng-template #donateform let-modal>
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Step of Help</h4>
+    <h4 class="modal-title" id="modal-basic-title">To make others lives better</h4>
     <button
+   
       type="button"
-      class="close"
+      id="close"
       aria-label="Close"
       (click)="modal.dismiss('Cross click')"
     >
