--- a/GiveLife-frontend/src/app/components/footer/footer.component.css
+++ b/GiveLife-frontend/src/app/components/footer/footer.component.css
@@ -2,10 +2,10 @@
 
 * {
   font-family: "Mitr", sans-serif;
-  margin: 0px;
+  /* margin: 0px; */
   padding: 0px;
 }
-footer {
+/* footer {
   display: flex;
   width: 100%;
   height: 200px;
@@ -17,15 +17,17 @@ footer {
     from(#c32232),
     to(#e87d88)
   );
-  background: linear-gradient(to bottom, #e87d88, #c32232);
+  background: linear-gradient(to bottom, #e87d88, #c32232); */
+
 /*   footer  */
 
 .site-footer {
-  background-color: hsl(354, 70%, 54%,90%);
-  padding: 45px 0 20px;
+  background-color: #f8f9fa;
+  /* padding: 25px 0 15px; */
   font-size: 18px;
   line-height: 24px;
-  color: rgb(222, 220, 253);
+  color: #818a91;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .site-footer hr {
@@ -34,25 +36,24 @@ footer {
 }
 
 .site-footer hr.small {
-  margin: 20px 0;
+  margin: 15px 0;
 }
 
 .site-footer h6 {
-  color: #fff;
-  font-size: 22px;
-  text-transform: uppercase;
-  margin-top: 5px;
+  color: #6e7174;
+  font-size: larger;
+  font-weight: 900;
   letter-spacing: 2px;
 }
 
 .site-footer a {
-  color: #0a34f15e;
+  color: #dc3545;
 }
 
-.site-footer a:hover {
+/* .site-footer a:hover {
   color: #3366cc;
   text-decoration: none;
-}
+} */
 
 .footer-links {
   padding-left: 0;
@@ -175,6 +176,10 @@ footer {
 
 .social-icons a.dribbble:hover {
   background-color: #ea4c89;
+}
+
+.social-icons a.youtube:hover {
+  background-color: rgb(219, 18, 18);
 }
 
 @media (max-width: 767px) {
