--- a/GiveLife-frontend/src/app/components/header/header.component.html
+++ b/GiveLife-frontend/src/app/components/header/header.component.html
@@ -24,7 +24,7 @@
                         d="m169 88.597656c-5.519531 0-10 4.480469-10 10 0 5.519532 4.480469 10 10 10s10-4.480468 10-10c0-5.519531-4.480469-10-10-10zm0 0" />
                 </svg>
                 <!-- <img src="https://image.flaticon.com/icons/png/512/786/786660.png" width="30" height="30" class="d-inline-block align-top" alt=""> -->
-                Giving Help
+                Give Life
             </a>
 
         </li>
