--- a/GiveLife-frontend/src/app/components/home-page/home-page.component.css
+++ b/GiveLife-frontend/src/app/components/home-page/home-page.component.css
@@ -1,142 +1,106 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins|Ubuntu&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins|Ubuntu&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap");
 
-
-    
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Mitr', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Mitr", sans-serif;
 }
 
 body {
-    background: #eee;
-    font-family: 'Ubuntu', sans-serif
+  background: #eee;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .box {
-    position: relative;
-    width: 100%;
-    padding-right: 20px;
-    padding-left: 20px
+  position: relative;
+  width: 100%;
+  padding-right: 20px;
+  padding-left: 20px;
 }
 
 .our-services {
-    margin-top: 75px;
-    padding-bottom: 30px;
-    padding: 0 60px;
-    min-height: 198px;
-    text-align: center;
-    border-radius: 10px;
-    background-color: #fff;
-    transition: all .4s ease-in-out;
-    box-shadow: 0 0 25px 0 rgba(20, 27, 202, .17)
+  margin-top: 75px;
+  padding-bottom: 30px;
+  padding: 0 60px;
+  min-height: 198px;
+  text-align: center;
+  border-radius: 10px;
+  background-color: #fff;
+  transition: all 0.4s ease-in-out;
+  box-shadow: 0 0 25px 0 rgba(20, 27, 202, 0.17);
 }
 
 .our-services .icon {
-    margin-bottom: -21px;
-    transform: translateY(-50%);
-    text-align: center
+  margin-bottom: -21px;
+  transform: translateY(-50%);
+  text-align: center;
 }
 
 .our-services:hover h2,
 .our-services:hover p {
-    color: #fff
+  color: #fff;
 }
 
 .speedup:hover {
-    box-shadow: 0 0 25px 0 rgba(20, 27, 201, .05);
-    cursor: pointer;
-    background-image: linear-gradient(-45deg, #fb0054 0%, #f55b2a 100%)
+  box-shadow: 0 0 25px 0 rgba(20, 27, 201, 0.05);
+  cursor: pointer;
+  background-image: linear-gradient(-45deg, #fb0054 0%, #f55b2a 100%);
 }
 
 .settings:hover {
-    box-shadow: 0 0 25px 0 rgba(20, 27, 201, .05);
-    cursor: pointer;
-    background-image: linear-gradient(-45deg, #34b5bf 0%, #210c59 100%)
+  box-shadow: 0 0 25px 0 rgba(20, 27, 201, 0.05);
+  cursor: pointer;
+  background-image: linear-gradient(-45deg, #34b5bf 0%, #210c59 100%);
 }
 
 .privacy:hover {
-    box-shadow: 0 0 25px 0 rgba(20, 27, 201, .05);
-    cursor: pointer;
-    background-image: linear-gradient(-45deg, #3615e7 0%, #44a2f6 100%)
+  box-shadow: 0 0 25px 0 rgba(20, 27, 201, 0.05);
+  cursor: pointer;
+  background-image: linear-gradient(-45deg, #3615e7 0%, #44a2f6 100%);
 }
 
 .backups:hover {
-    box-shadow: 0 0 25px 0 rgba(20, 27, 201, .05);
-    cursor: pointer;
-    background-image: linear-gradient(-45deg, #fc6a0e 0%, #fdb642 100%)
+  box-shadow: 0 0 25px 0 rgba(20, 27, 201, 0.05);
+  cursor: pointer;
+  background-image: linear-gradient(-45deg, #fc6a0e 0%, #fdb642 100%);
 }
 
 .ssl:hover {
-    box-shadow: 0 0 25px 0 rgba(20, 27, 201, .05);
-    cursor: pointer;
-    background-image: linear-gradient(-45deg, #8d40fb 0%, #5a57fb 100%)
+  box-shadow: 0 0 25px 0 rgba(20, 27, 201, 0.05);
+  cursor: pointer;
+  background-image: linear-gradient(-45deg, #8d40fb 0%, #5a57fb 100%);
 }
 
 .database:hover {
-    box-shadow: 0 0 25px 0 rgba(20, 27, 201, .05);
-    cursor: pointer;
-    background-image: linear-gradient(-45deg, #27b88d 0%, #22dd73 100%)
+  box-shadow: 0 0 25px 0 rgba(20, 27, 201, 0.05);
+  cursor: pointer;
+  background-image: linear-gradient(-45deg, #27b88d 0%, #22dd73 100%);
 }
 
 .dnow-regionsContent {
-    background-color: SlateGray;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    opacity: 0.8;
+  background-color: SlateGray;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  opacity: 0.8;
 }
 
 .tolargefont {
-    font-size: 2cm;
+  font-size: 2cm;
 }
 
 .dnow-regionsContent .card-img-overlay img {
-    max-height: 40rem;
+  max-height: 40rem;
 }
 
 .overlay-div {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    background-color: #000;
-    opacity: .7;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-color: #000;
+  opacity: 0.5;
 }
-
-/* #photoscards {
-    padding: 5rem;
-    mask-position: center;
-    background-image: url(http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/bg.jpg);
-} */
-
-
-/* @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
-.div5 {
-    grid-area: 3 / 3 / 4 / 4;
-    margin-top: 0px;
-    padding: 10px;
-    border: 1px #F74F22 solid;
-    border-radius: 30px;
-    outline: none;
-    width: 100%;
-    height: 45%;
-    border: 1px;
-    border-radius: 30px;
-    background-color: #F74F22;
-    font-weight: normal;
-    color: white;
-    font-size: large;
-}
-
-button:hover {
-    font-size: larger;
-    font-weight: lighter;
-    background-color: white;
-    border: 1px solid #F74F22;
-    color: #F74F22;
-    transition: 0.7s;
-} */
