--- a/GiveLife-frontend/src/app/components/home-page/home-page.component.html
+++ b/GiveLife-frontend/src/app/components/home-page/home-page.component.html
@@ -1,72 +1,3 @@
-<!-- <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="1" class="active"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="2" class="active"></li>
-        <li data-target="#carouselExampleCaptions" data-slide-to="3" class="active"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/10/home-1_slider-3_2.jpg" class="d-block w-100" alt="img1">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/10/home-1_slider-1_2.jpg" class="d-block w-100" alt="img2">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/10/home-1_slider-2_2-1.jpg" class="d-block w-100" alt="img3">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-            </div>
-        </div>
-
-        <div class="carousel-item">
-            <img src="https://c0.wallpaperflare.com/preview/287/860/54/team-ethnicity-group-hands.jpg" class="d-block w-100" alt="img4">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>forth slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-            </div>
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div> -->
-
-<!-- <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active" data-interval="10000">
-            <img src="https://rayramsay.com/wp-content/uploads/2018/10/teamhands.png" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item" data-interval="2000">
-            <img src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/10/home-1_slider-1_2.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/10/home-1_slider-1_2.jpg" class="d-block w-100" alt="...">
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div> -->
 
 <section class="dnow-regionsWrap">
     <div class="dnow-regionsContent">
@@ -79,14 +10,14 @@
                         <div class="tolargefont">
 
 
-                            <h1 class="card-title " style="padding-left: 5px;">
+                            <h1 class="card-title " style="padding: 5px; margin-left: 60px;">
                                 <span style="font-size: 80px; color: #DC3545;">Giving</span> 
                                 <br>
                                 <span style="padding-left: 90px;">is the greatest act of </span>
                                 <br>
                                 <span style="font-size: 80px; color: #DC3545; padding-left: 180px;">Grace</span>
                             </h1>
-                            <!-- <button class="btn" id="div5">Donate</button> -->
+                   
                         </div>
                     </div>
                 </div>
@@ -147,46 +78,5 @@
         </div>
     </div>
 </div>
-<!-- <div id="photoscards">
-    
-    <div class="row text-center text-lg-center">
-
-        <div class=" col-md-2 ">
-            <a href="#" class="d-block mb-4 ">
-                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_01.png" alt="">
-            </a>
-        </div>
-        <div class="col-md-2 ">
-            <a href="#" class="d-block mb-4 ">
-                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_02.png" alt="">
-            </a>
-        </div>
-        <div class="col-md-2 ">
-            <a href="#" class="d-block mb-4">
-                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_04.png" alt="">
-            </a>
-        </div>
-        <div class="col-md-2">
-            <a href="#" class="d-block mb-4 ">
-                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_05.png" alt="">
-            </a>
-        </div>
-        <div class="col-md-2">
-            <a href="#" class="d-block mb-4 ">
-                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_06.png" alt="">
-            </a>
-        </div>
-        <div class="col-md-2">
-            <a href="#" class="d-block mb-4 ">
-                <img class="img-fluid img-thumbnail" src="http://bighearts.wgl-demo.net/wp-content/uploads/2020/08/partners_01.png" alt="">
-            </a>
-        </div>
-
-    </div>
-
-</div> -->
-
-<div class="container">
 
 
-</div>
