--- a/GiveLife-frontend/src/app/components/posts/posts.component.css
+++ b/GiveLife-frontend/src/app/components/posts/posts.component.css
@@ -1,68 +1,83 @@
-@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap");
 
-*{
-    font-family: 'Mitr', sans-serif;
+* {
+  font-family: "Mitr", sans-serif;
 }
 
+.close {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: none;
+  background-color: #dc3545;
+  font-weight: normal;
+  color: white;
+  font-size: large;
+}
 .div5 {
-    grid-area: 3 / 3 / 4 / 4;
-    margin-top: 0px;
-    padding: 10px;
-    border: 1px #DC3545 solid;
-    border-radius: 30px;
-    outline: none;
-    width: 100%;
-    height: 45%;
-    border: 1px;
-    border-radius: 30px;
-    background-color: #DC3545;
-    font-weight: normal;
-    color: white;
-    font-size: large;
+  grid-area: 3 / 3 / 4 / 4;
+  margin-top: 0px;
+  padding: 10px;
+  border: 1px #dc3545 solid;
+  border-radius: 30px;
+  outline: none;
+  width: 100%;
+  height: 45%;
+  border: 1px;
+  border-radius: 30px;
+  background-color: #dc3545;
+  font-weight: normal;
+  color: white;
+  font-size: large;
 }
 
 #firsttsection:hover {
-    font-size: larger;
-    font-weight: lighter;
-    background-color: white;
-    border: 1px solid #9e9e9e;
-    color: #DC3545;
-    transition: 0.7s;
+  font-size: larger;
+  font-weight: lighter;
+  background-color: white;
+  border: 1px solid #9e9e9e;
+  color: #dc3545;
+  transition: 0.7s;
 }
 
 body {
-    background: linear-gradient(to right, rgba(235, 224, 232, 1) 52%, rgba(254, 191, 1, 1) 53%, rgba(254, 191, 1, 1) 100%);
-    font-family: 'Roboto', sans-serif
+  background: linear-gradient(
+    to right,
+    rgba(235, 224, 232, 1) 52%,
+    rgba(254, 191, 1, 1) 53%,
+    rgba(254, 191, 1, 1) 100%
+  );
+  font-family: "Roboto", sans-serif;
 }
 
 .card {
-    /* margin: 10px; */
-    display: grid;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-    border-radius: 15px;
-    margin: 20px 0 50px;
-    padding: 15px;
-    padding-bottom: 20px !important
+  /* margin: 10px; */
+  display: grid;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  border-radius: 15px;
+  margin: 20px 0 50px;
+  padding: 15px;
+  padding-bottom: 20px !important;
 }
 
 #publichstyle {
-    margin: 0.6rem;
-    clear: both;
-    float: right;
-    padding-left: 1.7rem;
-    padding-right: 1.7rem;
+  margin: 0.6rem;
+  clear: both;
+  float: right;
+  padding-left: 1.7rem;
+  padding-right: 1.7rem;
 }
 
 .msg {
-    font-size: small;
-    color: black;
-    border: none;
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
+  font-size: small;
+  color: black;
+  border: none;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 /* app-post {
