--- a/GiveLife-frontend/src/app/components/sign-in/sign-in.component.css
+++ b/GiveLife-frontend/src/app/components/sign-in/sign-in.component.css
@@ -1,73 +1,65 @@
-@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@300&family=Roboto+Slab&display=swap");
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Mitr', sans-serif;
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Mitr", sans-serif;
 }
 
-h2{
-    padding: 5px;
-    margin: 15px;
-    color: black;
-    font-size: 50px;
-    font-weight: bold;
-    text-align: center;
+h2 {
+  padding: 5px;
+  margin: 15px;
+  color: black;
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
 }
-  
+
 #formDiv {
-    margin-top:60px ;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    border-radius: 15px;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 20px;
-
-}
-  
-.formElement , .form-select{
-    padding: 7px;
-    padding-left:15px ;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    border-radius:30px;
-    background-color: white;
-    border-color: #DC3545;
-    border-width: 1px;
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
-}
-.form-select{
-    margin-top: 0px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  border-radius: 15px;
+  width: 50%;
+  margin: 60px auto;
+  padding: 20px;
 }
 
-.msg{
-    font-size: small;
-    color: black;
-    border:none;
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
+.formElement,
+.form-select {
+  padding: 7px;
+  padding-left: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  border-radius: 30px;
+  background-color: white;
+  border-color: #dc3545;
+  border-width: 1px;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+.form-select {
+  margin-top: 0px;
 }
 
-  
-#submit{
-    padding: 7px;
-    margin-top: 20px;
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
-    border-radius:30px;
-    background-color: #DC3545;
-    font-weight: bold;
-    border-radius:30px;
-    border-width: 3px;
-    /* border-color: white; */
-    color: black;
-    outline: none;
+.msg {
+  font-size: small;
+  color: black;
+  border: none;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+#submit {
+  padding: 9px 7px;
+  width: 36%;
+  margin: 20px 32% 0px 32%;
+  border-radius: 30px;
+  background-color: #dc3545;
+  font-weight: bold;
+  border: none;
+  color: black;
+  outline: none;
 }
