--- a/GiveLife-frontend/src/app/components/sign-in/sign-in.component.html
+++ b/GiveLife-frontend/src/app/components/sign-in/sign-in.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
-    <div class="container">
+    <div class="container m-auto">
         <div class="row">
             <div class="col-md">
-                <div id="formDiv">
+                <div id="formDiv" >
                     <h2>Sign In</h2>
                     <br>
                     <form name="signInForm" #signInForm="ngForm" (ngSubmit)="onSubmit(signInForm)">
