--- a/GiveLife-frontend/src/app/components/sign-up/sign-up.component.html
+++ b/GiveLife-frontend/src/app/components/sign-up/sign-up.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="container">
+    <div class="container m-auto">
         <div class="row">
             <div class="col-md">
                 <div id="formDiv">
