--- a/GiveLife-frontend/src/app/components/header/header.component.html
+++ b/GiveLife-frontend/src/app/components/header/header.component.html
@@ -23,7 +23,6 @@
                     <path
                         d="m169 88.597656c-5.519531 0-10 4.480469-10 10 0 5.519532 4.480469 10 10 10s10-4.480468 10-10c0-5.519531-4.480469-10-10-10zm0 0" />
                 </svg>
-                <!-- <img src="https://image.flaticon.com/icons/png/512/786/786660.png" width="30" height="30" class="d-inline-block align-top" alt=""> -->
                 Give Life
             </a>
 
@@ -40,7 +39,7 @@
     <ul class="nav justify-content-end">
 
         <li class="nav-item dropdown">
-            <a class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">
+            <a id="navuser" class="nav-link  dropdown-toggle" href="#" data-bs-toggle="dropdown">
                 <button type="button" class="btn pesronicon"><img
                         src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-512.png" width="20"
                         height="20"></button> </a>
@@ -65,31 +64,3 @@
 
     </ul>
 </nav>
-
-<!-- <ng-template #donateform let-modal>
-    <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">
-            Step of Help
-        </h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-  
-            <span aria-hidden="true">
-                ×
-            </span>
-        </button>
-    </div>
-    <div class="modal-body">
-        <form name="donateform" #donateform="ngForm" (ngSubmit)="onSubmit(donateform)">
-            <div class="row">
-                <div class="col-md">
-                    <div class="parent">
-                        <br>
-                        <div class="div2"><input class="form-control" placeholder="Donated Amount.."></div>
-                        <br>
-                        <button class="div5 " type=" submit ">Donate <i>♥</i> </button>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-</ng-template> -->
