--- a/GiveLife-frontend/src/app/components/home-page/home-page.component.html
+++ b/GiveLife-frontend/src/app/components/home-page/home-page.component.html
@@ -10,12 +10,12 @@
                         <div class="tolargefont">
 
 
-                            <h1 class="card-title " style="padding: 5px; margin-left: 60px;">
-                                <span style="font-size: 80px; color: #DC3545;">Giving</span> 
+                            <h1 class="card-title">
+                                <span id="Quote1">Giving</span> 
                                 <br>
-                                <span style="padding-left: 90px;">is the greatest act of </span>
+                                <span id="Quote2">is the greatest act of </span>
                                 <br>
-                                <span style="font-size: 80px; color: #DC3545; padding-left: 180px;">Grace</span>
+                                <span id="Quote3">Grace</span>
                             </h1>
                    
                         </div>
