--- a/GiveLife-frontend/src/app/components/cupon/cupon.component.css
+++ b/GiveLife-frontend/src/app/components/cupon/cupon.component.css
@@ -20,7 +20,20 @@ form{
 .card{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     border-radius: 15px;
+    width: 30%;
 }
+
+@media only screen and (max-width: 993px) {
+    .card {
+      width: 45%;
+    }
+  }
+  
+  @media only screen and (max-width: 768px) {
+    .card {
+      width: 90%;
+    }
+  }
 
  /* @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
  .card-details {
