--- a/GiveLife-frontend/src/app/components/footer/footer.component.html
+++ b/GiveLife-frontend/src/app/components/footer/footer.component.html
@@ -1,22 +1,3 @@
-<!-- <footer>
-    <div class="rightFooter">
-
-            <h3>Contact Us</h3>
- <ul> 
-     <li></li>
-     <li></li>
-     <li></li>
-     <li></li>
-     <li></li>
-     <li></li>
- </ul>
-
-    </div>
-    <div class="leftFooter">
-        <div></div>
-
-    </div> -->
-<!-- Site footer -->
 <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -29,27 +10,22 @@
         <p id="about" class="text-justify">
           GiveLife.com
           <br />
-          In our application you will find GiveLife is a globally recognized
-          charity App, that connect you the donor directly with the charity of
-          your choice via the app delivery service. With a few simple steps you
-          are able to donate anything your heart desires to the charity of your
-          choice in your city. We ensure to support every type of charity and
-          humanitarian event possible, including natural disaster affected
-          areas.
+          A charity application that allows you to donate via mobile and
+          communicate with cases near you. And donating not only money, but also
+          food, clothes or medicine. Our motto is to love and care for people
+          and provide assistance to make a change in society. A person cannot
+          live alone, but all of us together can overcome difficulties.
         </p>
       </div>
 
-      <div class="col-xs-6 col-md-3 ">
-      </div>
+      <div class="col-xs-6 col-md-3"></div>
 
-      <div class="col-xs-6 col-md-3 ">
+      <div class="col-xs-6 col-md-3">
         <img
           src="https://image.flaticon.com/icons/png/512/786/786660.png"
           style="height: 180px; border-radius: 3%"
         />
       </div>
-
-     
     </div>
     <hr />
   </div>
@@ -69,9 +45,10 @@
           </li>
           <li>
             <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
-           
           </li>
-          <li > <a class="youtube" href="#" > <i class="fa fa-youtube"></i> </a></li>
+          <li>
+            <a class="youtube" href="#"> <i class="fa fa-youtube"></i> </a>
+          </li>
           <li>
             <a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a>
           </li>
@@ -81,5 +58,5 @@
         </ul>
       </div>
     </div>
-  <!-- </div>
-</footer> -->
+  </div>
+</footer>
