--- a/GiveLife-frontend/src/app/components/header/header.component.css
+++ b/GiveLife-frontend/src/app/components/header/header.component.css
@@ -15,23 +15,6 @@ nav {
 
 }
 
-/* .div5 {
-    grid-area: 3 / 3 / 4 / 4;
-    margin-top: 0px;
-    padding: 10px;
-    border: 1px #FC756C solid;
-    border-radius: 30px;
-    outline: none;
-    width: 100%;
-    height: 45%;
-    border: 1px;
-    border-radius: 30px;
-    background-color: #FC756C;
-    font-weight: normal;
-    color: white;
-    font-size: large;
-} */
-
 .pesronicon:hover{
     border: 2px #DC3545 solid;
     border-radius: 25%;
@@ -62,7 +45,11 @@ nav {
     transition: 0.7s;
 }
 
-
+@media only screen and (max-width: 610px) {
+    #navuser{
+        padding: 0.5rem 0.5rem 0.5rem 3rem;
+    }  
+}
 
 
 
@@ -70,6 +57,4 @@ svg{
     stroke:#DC3545 !important;
     stroke-linecap: round !important;
     stroke-width:2 !important;
-    /* color: chartreuse !important; */
-
 }
