--- a/GiveLife-frontend/src/app/components/home-page/home-page.component.css
+++ b/GiveLife-frontend/src/app/components/home-page/home-page.component.css
@@ -104,3 +104,46 @@ body {
   background-color: #000;
   opacity: 0.5;
 }
+
+.card-title{
+  padding: 5px;
+}
+#Quote1{
+  font-size: 185%;
+  color: #DC3545;
+}
+#Quote2{
+  padding-left: 90px;
+}
+#Quote3{
+  font-size: 185%;
+  color: #DC3545;
+  padding-left: 180px;
+}
+@media only screen and (max-width: 925px) {
+  #Quote1{
+  font-size: 150%;
+  }
+  #Quote2{
+    font-size: 80%;
+    padding-left: 60px;
+  }
+  #Quote3{
+    font-size: 150%;
+    padding-left: 150px;
+  }
+}
+
+@media only screen and (max-width: 662px) {
+  #Quote1{
+  font-size: 100%;
+  }
+  #Quote2{
+    font-size: 60%;
+    padding-left: 20px;
+  }
+  #Quote3{
+    font-size: 100%;
+    padding-left: 50px;
+  }
+}
