--- a/GiveLife-frontend/src/app/components/post/post.component.css
+++ b/GiveLife-frontend/src/app/components/post/post.component.css
@@ -99,3 +99,10 @@ body {
     width: 90%;
   }
 }
+
+@media only screen and (max-width: 505px) {
+  button {
+    margin-left: 15%;
+    width: 70%;
+  }
+}
