--- a/GiveLife-frontend/src/app/components/sign-up/sign-up.component.css
+++ b/GiveLife-frontend/src/app/components/sign-up/sign-up.component.css
@@ -66,3 +66,23 @@ h2 {
   outline: none;
 }
 
+@media only screen and (max-width: 505px) {
+  h2{
+    font-size: 35px;
+    padding: 0px;
+  }
+  .formElement,
+  .form-select {
+  width: 100%;
+  margin-left: 0%;
+  margin-right: 0%;
+  }
+  #submit {
+    width: 100%;
+    margin: 20px 0% 0px 0%;
+
+  }
+  #formDiv {
+    width: 70%;
+  }
+}
