--- a/GiveLife-frontend/src/app/app.component.html
+++ b/GiveLife-frontend/src/app/app.component.html
@@ -1,6 +1,32 @@
-<app-header></app-header>
-<router-outlet>
+<app-header *ngIf='status == "ONLINE"'></app-header>
+<router-outlet *ngIf='status == "ONLINE"'>
 
 </router-outlet>
 
-<app-footer></app-footer>
+
+<div class="container my-5 d-flex justify-content-center" *ngIf='status == "OFFLINE"'>
+    <div class="row justify-content-center ">
+        <div class="col">
+            <div class="card ">
+                <div class="card-header pb-0 bg-white border-0 text-center px-sm-4">
+                    <h6 class="text-left mt-4 font-weight-bold mb-0"><span><i class="fa fa-times-circle fa-2x mr-3 " aria-hidden="true"></i> </span> No internet connection</h6> <span class="img-1 text-center"><img src="https://i.imgur.com/cGXM38s.png" class="img-fluid my-4 " /></span>
+                </div>
+                <div class="card-body px-sm-4 mb-3">
+                    <ul class="list-unstyled text-muted">
+                        <li>Please re-connect to the internet to continue use Footsteps.</li>
+                        <li>If you encounter problems:</li>
+                        <ul class="mt-2 inner">
+                            <li>Try restarting wireless connection on this device.</li>
+                            <li>Move clouse to your wireless access point.</li>
+                        </ul>
+                    </ul>
+                   
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<app-footer *ngIf='status == "ONLINE"'></app-footer>
