--- a/GiveLife-frontend/src/app/app.component.html
+++ b/GiveLife-frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
 
 </router-outlet>
 
-
+<!-- 
 <div class="container my-5 d-flex justify-content-center" *ngIf='status == "OFFLINE"'>
     <div class="row justify-content-center ">
         <div class="col">
@@ -25,7 +25,9 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
+
+<div class="loader"  *ngIf='status == "OFFLINE"'></div>
 
 
 
